--- a/pseudo_mux.qsf
+++ b/pseudo_mux.qsf
@@ -18,14 +18,14 @@
 #
 # Quartus II 64-Bit
 # Version 13.0.0 Build 156 04/24/2013 SJ Full Version
-# Date created = 18:21:34  October 17, 2018
+# Date created = 17:29:21  October 19, 2018
 #
 # -------------------------------------------------------------------------- #
 #
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		mean_4_clocks_assignment_defaults.qdf
+#		pseudo_mux_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
@@ -37,17 +37,29 @@
 
 
 set_global_assignment -name FAMILY "Cyclone II"
-set_global_assignment -name DEVICE AUTO
-set_global_assignment -name TOP_LEVEL_ENTITY mean_4_clocks
+set_global_assignment -name DEVICE EP2C35F672C6
+set_global_assignment -name TOP_LEVEL_ENTITY pseudo_mux
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.0
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "18:21:34  OCTOBER 17, 2018"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "17:29:21  OCTOBER 19, 2018"
 set_global_assignment -name LAST_QUARTUS_VERSION 13.0
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
-set_global_assignment -name VHDL_FILE mean_4_clocks.vhd
-set_global_assignment -name VHDL_FILE tb_mean_4_clocks.vhd
+set_global_assignment -name VHDL_FILE pseudo_mux.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE tb_pseudo_mux.vhd
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
+set_location_assignment PIN_N25 -to A
+set_location_assignment PIN_N26 -to B
+set_location_assignment PIN_P25 -to C
+set_location_assignment PIN_AE14 -to D
+set_location_assignment PIN_Y18 -to q
+set_location_assignment PIN_W26 -to RESET
+set_location_assignment PIN_P23 -to s
+set_location_assignment PIN_N2 -to CLOCK
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
